--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: java
-# set up the vm for android compilation
+jdk:
+  - openjdk7
+  - oraclejdk7
+  - openjdk6
+  - oraclejdk6
 before_install:
-  - sudo apt-get update -qq
-  - if [ `uname -m` = x86_64 ]; then sudo DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confnew" install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
-  - wget http://dl.google.com/android/android-sdk_r21.0.1-linux.tgz
-  - tar xzf android-sdk_r21.0.1-linux.tgz
-  - export ANDROID_HOME=$PWD/android-sdk-linux
+  - wget http://dl.google.com/android/android-sdk_r21-linux.tgz
+  - tar -zxf android-sdk_r21-linux.tgz
+  - export ANDROID_HOME=~/builds/Stichoza/AnySoftKeyboardLanguagePackGeorgian/android-sdk-linux
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-  - android list sdk
-  - android update sdk --filter platform-tools,android-10,android-16,android-17,extra-android-support --no-ui --force
-  - git submodule update --init --recursive
+  - android update sdk --filter tools,platform-tools,android-17,android-16 --no-ui --force
